[package]
name = "reth-docker-template-blueprint-lib"
version = "0.1.0"
description.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
blueprint-sdk = { workspace = true, features = ["std", "tangle", "macros"] }
tokio = { workspace = true, features = ["sync", "rt-multi-thread", "macros", "time"] }
clap = { version = "4.5.3", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[[bin]]
name = "reth-cli"
path = "src/bin/reth_cli.rs"

[dev-dependencies]
blueprint-sdk = { workspace = true, features = ["testing", "tangle"] }
color-eyre = { workspace = true }

[package.metadata.blueprint]
manager = { Evm = "ExperimentalBlueprint" }
master_revision = "Latest"
